[metadata]
name =opentorsion-htunk
version = 0.0.6
author = Sampo Laine
author_email = henri.tunkkari@aalto.fi
description = Open source library for creating torsional finite element models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sampolaine/openTorsion
project_urls =
    Bug Tracker = https://github.com/sampolaine/openTorsion/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = opentorsion
packages = find:
python_requires = >=3.6

[options.packages.find]
where = opentorsion