[metadata]
name =opentorsion
version = 0.0.2
author = Aalto ARotor
author_email = todo@aalto.fi
description = Open source library for creating torsional finite element models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aalto-Arotor/openTorsion
project_urls =
    Bug Tracker = https://github.com/Aalto-Arotor/openTorsion/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = opentorsion
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    scipy

[options.packages.find]
where = opentorsion